--- a/src/MyFriends.App/MainPage.xaml
+++ b/src/MyFriends.App/MainPage.xaml
@@ -14,21 +14,14 @@
                 SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
-                Text="Hello, World!"
+                Text="Are you dreaming about turning letters to digits? Then click this button!"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                Text="Let's translate!" 
+                SemanticProperties.Hint="Don't be fool, just click me!"
+                Clicked="GoToTranslate"
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
