--- a/src/MyFriends.App/AppShell.xaml
+++ b/src/MyFriends.App/AppShell.xaml
@@ -3,13 +3,25 @@
     x:Class="MyFriends.App.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MyFriends.App"
+    xmlns:local="clr-namespace:MyFriends.App.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="MyFriends.App">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="FriendListView"
+        ContentTemplate="{DataTemplate local:FriendListView}"
+        Route="friends" />
+    <ShellContent
+        Title="FriendDetailView"
+        ContentTemplate="{DataTemplate local:FriendDetailView}"
+        Route="friends/detail" />
+    <ShellContent
+        Title="FriendEditView"
+        ContentTemplate="{DataTemplate local:FriendEditView}"
+        Route="friends/detail/edit" />
+    <ShellContent
+        Title="FriendNewView"
+        ContentTemplate="{DataTemplate local:FriendEditView}"
+        Route="friends/new" />
 
 </Shell>
